# csc583

./: .gitignore  README.md  app.py  main.py  model_testing.ipynb  output.txt  pyproject.toml  requirements.txt  train_model.py  training_history.csv
