[project]
name = "imgclass-cnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "altair<5",
    "cv>=1.0.0",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.90",
    "pandas>=3.0.0",
    "pip>=25.3",
    "scikit-learn>=1.8.0",
    "standard-imghdr>=3.13.0",
    "streamlit>=1.19.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tqdm>=4.67.1",
]
